--- a/site/about.html.j2
+++ b/site/about.html.j2
@@ -5,7 +5,7 @@
     <div class="container-xxl mt-3">
       <div class="row d-none d-md-flex">
         <div class="col-6 text-center">
-          <img class="object-fit-contain mw-100" src="images/Headshot 8.png" style="max-height: 60vh" class="rounded mx-auto d-block"></img>
+          <img class="object-fit-contain mw-100" src="images/Headshot 8.jpg" style="max-height: 60vh" class="rounded mx-auto d-block"></img>
         </div>
         <div class="col-6">
           <div>
@@ -29,7 +29,7 @@
 
       <div class="d-flex d-lg-none flex-column">
         <h1 style="font-size: 8rem">Hi!</h1>
-        <img class="object-fit-contain mw-100" src="images/Headshot 8.png" style="max-height: 60vh" class="rounded mx-auto d-block"></img>
+        <img class="object-fit-contain mw-100" src="images/Headshot 8.jpg" style="max-height: 60vh" class="rounded mx-auto d-block"></img>
         <div class="mt-3">
           <p>
           I'm Alison, the creator behind the Wholesome Home Cook.
