include smaller jpgs

--- a/site/services.html.j2
+++ b/site/services.html.j2
@@ -9,7 +9,7 @@
       <div class="row gy-5">
 
         <div class="col-lg-6 d-flex justify-content-center">
-          <img class="img-fluid object-fit-contain rounded-3" src="images/davis-coop-kitchen2.png" width=auto style="max-height: 500px"></img>
+          <img class="img-fluid object-fit-contain rounded-3" src="images/davis-coop-kitchen2.jpg" width=auto style="max-height: 500px"></img>
         </div>
 
         <div class="col-lg-6 d-flex justify-content-center flex-column align-items-center">
