add title description & commented out carousel prototype

--- a/site/index.html.j2
+++ b/site/index.html.j2
@@ -4,6 +4,10 @@
 
   <img class="object-fit-cover w-100" src="images/Tabledisplay2_VCA_7417.jpg" style="max-height: 30vh; object-position: 0 70%"></img>
 
+  <div class="container-fluid d-flex justify-content-center bg-nude py-3">
+    <h1 class="text-center fs-1">Wholesome Veggie Forward Cooking Classes & Small Event Catering</h1>
+  </div>
+
   <div class="bg-forest text-light w-100 py-3">
     <form class="container-xl">
       <h2 class="text-center" style="font-size: 4rem; font-weight: bold">Stay In Touch!</h2>
@@ -68,91 +72,34 @@
         </div>
 
     </div>
+    <!-- <div class="container-xxl"> -->
+    <!--   <div id="carouselExample" class="carousel slide"> -->
+    <!--     <div class="carousel-inner"> -->
+    <!--       <div class="carousel-item active"> -->
+    <!--         <img class="d-block w-100" src="images/Applecrisp w ice cream and caramel_VCA_7513.jpg" style="max-height: 50vh; object-position: 0 60%"></img> -->
+    <!--       </div> -->
+    <!--       <div class="carousel-item"> -->
+    <!--         <img class="d-block w-100" src="images/Tabledisplay2_VCA_7417.jpg" style="max-height: 50vh; object-position: 0 70%"></img> -->
+    <!--       </div> -->
+    <!--       <div class="carousel-item"><img class="d-block w-100" src="images/applecrisp_singletopdown_VCA_7522.jpg" style="max-height: 50vh; object-position: 0 50%"></img></div> -->
+    <!--       <div class="carousel-item"><img class="d-block w-100" src="images/AppleCrumble_Side_A7_00591.jpg" style="max-height: 50vh; object-position: 0 50%"></img></div> -->
+    <!--       <div class="carousel-item"><img class="d-block w-100" src="images/ChanaMasala_Topdown w sides_VCA_7486.jpg" style="max-height: 50vh; object-position: 0 30%"></img></div> -->
+    <!--       <div class="carousel-item"><img class="d-block w-100" src="images/Kofta_TopDown4_VCA_7393.jpg" style="max-height: 50vh; object-position: 0 50%"></img></div> -->
+    <!--       <div class="carousel-item"><img class="d-block w-100" src="images/Kofta_TopDown4_VCA_7396.jpg" style="max-height: 50vh; object-position: 0 50%"></img></div> -->
+    <!--       <div class="carousel-item"><img class="d-block w-100" src="images/Pozole_Topdown3_VCA_7494.jpg" style="max-height: 50vh; object-position: 0 40%"></img></div> -->
+
+    <!--     </div> -->
+    <!--     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev"> -->
+    <!--       <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+    <!--       <span class="visually-hidden">Previous</span> -->
+    <!--     </button> -->
+    <!--     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next"> -->
+    <!--       <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+    <!--       <span class="visually-hidden">Next</span> -->
+    <!--     </button> -->
+    <!--   </div> -->
+    <!-- </div> -->
   </div>
 
-
-  <!-- <div class="bg-burgundy text-light w-100 py-5"> -->
-  <!--   <form class="container-xl"> -->
-  <!--     <div class="ratio ratio-4x3"> -->
-  <!--       <!-1- desktop looks good 4x3, mobile looks good 1x1 -1-> -->
-  <!--       <iframe src="https://calm-brook-80279.myflodesk.com/signup" title="" allowfullscreen></iframe> -->
-  <!--     </div> -->
-      <!-- <div class="row gy-3"> -->
-      <!--   <div class="col-12 col-lg-6"> -->
-      <!--     <label for="exampleFormControlInput1" class="form-label">Your Name</label> -->
-      <!--     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="" required> -->
-      <!--   </div> -->
-      <!--   <div class="col-12 col-lg-6"> -->
-      <!--     <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
-      <!--     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required> -->
-      <!--   </div> -->
-      <!--   <div class="col d-flex justify-content-end"> -->
-      <!--     <button class="btn btn-sand btn-lg" type="submit">Sign Me Up!</button> -->
-      <!--   </div> -->
-      <!-- </div> -->
-    <!-- </form> -->
-  <!-- </div> -->
-
-  <!-- <div class="bg-eucalyptus text-light w-100 py-5"> -->
-  <!--   <div class="container-xl"> -->
-  <!--     <div class="row"> -->
-  <!--       <div class="col-lg-6"> -->
-  <!--         <h2>Newsletter</h2> -->
-  <!--         <p>{{ lorem[:200] }}</p> -->
-  <!--       </div> -->
-  <!--       <div class="col-lg-6 d-flex justify-content-center"> -->
-  <!--         <img src="images/CI Chicken with Tomato.png" height=500></img> -->
-  <!--       </div> -->
-  <!--     </div> -->
-  <!--   </div> -->
-  <!-- </div> -->
-
-  <!-- <div class="bg-sand text-light w-100 py-5"> -->
-  <!--   <div class="container-xl"> -->
-  <!--     <div class="row"> -->
-  <!--       <div class="col-lg-6"> -->
-  <!--         <h2>Blog & Recipes</h2> -->
-  <!--         <p>{{ lorem[:200] }}</p> -->
-  <!--         <div class="text-center"> -->
-  <!--           <button class="btn btn-forest btn-lg" type="submit">See More Recipes!</button> -->
-  <!--         </div> -->
-  <!--       </div> -->
-  <!--       <div class="col-lg-6 d-flex justify-content-center"> -->
-  <!--         <img src="images/CI Chicken with Tomato.png" height=500></img> -->
-  <!--       </div> -->
-  <!--     </div> -->
-  <!--   </div> -->
-  <!-- </div> -->
-
-  <!-- <div class="bg-forest text-light w-100 py-5"> -->
-  <!--   <div class="container-xl"> -->
-  <!--     <div class="row"> -->
-  <!--       <div class="col-lg-6 d-flex justify-content-center"> -->
-  <!--         <img src="images/CI Chicken with Tomato.png" height=500></img> -->
-  <!--       </div> -->
-  <!--       <div class="col-lg-6"> -->
-  <!--         <h2>Private Events</h2> -->
-  <!--         <p>{{ lorem[:200] }}</p> -->
-  <!--         <div class="text-center"> -->
-  <!--           <button class="btn btn-burgundy btn-lg" type="submit">See More Recipes!</button> -->
-  <!--         </div> -->
-  <!--       </div> -->
-  <!--     </div> -->
-  <!--   </div> -->
-  <!-- </div> -->
-
-  <!-- <div class="bg-burgundy text-light w-100 py-5"> -->
-  <!--   <div class="container-xl"> -->
-  <!--     <div class="row"> -->
-  <!--       <div class="col-lg-6"> -->
-  <!--         <h2>Cooking Classes</h2> -->
-  <!--         <p>{{ lorem[:200] }}</p> -->
-  <!--       </div> -->
-  <!--       <div class="col-lg-6 d-flex justify-content-center"> -->
-  <!--         <img src="images/CI Chicken with Tomato.png" height=500></img> -->
-  <!--       </div> -->
-  <!--     </div> -->
-  <!--   </div> -->
-  <!-- </div> -->
 
 {% endblock content %}
