--- a/site/index.html.j2
+++ b/site/index.html.j2
@@ -18,7 +18,7 @@
         <!-- <div class="col-12 col-lg-6"> -->
         <div class="col-12 col-lg-5">
           <label for="inputName" class="form-label">Your Name</label>
-          <input type="email" class="form-control py-3 rounded-pill" id="inputName" placeholder="" required>
+          <input type="text" class="form-control py-3 rounded-pill" id="inputName" placeholder="" required>
         </div>
         <!-- <div class="col-12 col-lg-6"> -->
         <div class="col-12 col-lg-5">
