add functional email sign up form

--- a/site/index.html.j2
+++ b/site/index.html.j2
@@ -9,21 +9,28 @@
   </div>
 
   <div class="bg-forest text-light w-100 py-3">
-    <form class="container-xl">
+    <form class="container-xl" action="https://form.flodesk.com/forms/65de4286d942542e16a49b57/submit" method="post">
       <h2 class="text-center" style="font-size: 4rem; font-weight: bold">Stay In Touch!</h2>
       <p class="text-center d-none d-md-block">Sign up to receive the Veggie Spotlight Newsletter that features a new in season veggie each week. PLUS get exclusive recipes, upcoming cooking classes, news, updates, and offers.</p>
       <p class="text-center d-block d-md-none">Sign up to receive the weekly Veggie Spotlight Newsletter PLUS exclusive recipes, upcoming cooking classes, news, updates, and offers.</p>
+      <input type="hidden" name="csrf" value="50efffab620047c66d19bd7b4b7e39bf24e46b42ad79bfb82f4148f646d6d5a3edc8a208c8e8de689da2d74313915fa34c2dbf0395b10bbfd7bfa648f3073a9a">
 
       <div class="row gy-3">
         <!-- <div class="col-12 col-lg-6"> -->
         <div class="col-12 col-lg-5">
-          <label for="inputName" class="form-label">Your Name</label>
-          <input type="text" class="form-control py-3 rounded-pill" id="inputName" placeholder="" required>
+          <label for="ff-65de4286d942542e16a49b57-R0xVaEo3LnVG" class="form-label">Your Name</label>
+          <input id="ff-65de4286d942542e16a49b57-R0xVaEo3LnVG" class="form-control py-3 rounded-pill" type="text" maxlength="255" name="R0xVaEo3LnVG" placeholder="" data-ff-tab="R0xVaEo3LnVG::RlBEN0I">
+          <!-- <label for="inputName" class="form-label">Your Name</label> -->
+          <!-- <!-1- <input type="text" class="form-control py-3 rounded-pill" id="inputName" placeholder="" required> -1-> -->
+
         </div>
         <!-- <div class="col-12 col-lg-6"> -->
         <div class="col-12 col-lg-5">
-          <label for="inputEmail" class="form-label">Email address</label>
-          <input type="email" class="form-control py-3 rounded-pill" id="inputEmail" placeholder="name@example.com" required>
+          <label for="ff-65de4286d942542e16a49b57-RlBEN0I" class="ff-65de4286d942542e16a49b57__label fd-form-label">Email Address</label>
+          <input id="ff-65de4286d942542e16a49b57-RlBEN0I" class="form-control py-3 rounded-pill" type="email" maxlength="255" name="RlBEN0I" placeholder="name@email.com" data-ff-tab="RlBEN0I:R0xVaEo3LnVG:UFNXN0VMUg">
+
+          <!-- <label for="inputEmail" class="form-label">Email address</label> -->
+          <!-- <input type="email" class="form-control py-3 rounded-pill" id="inputEmail" placeholder="name@email.com" required> -->
         </div>
 
         <!-- TODO: button should justify-end on mobile width -->
